Fixes alignment issues with the filter bar

--- a/app/assets/stylesheets/framework/dropdowns.scss
+++ b/app/assets/stylesheets/framework/dropdowns.scss
@@ -135,11 +135,12 @@
 
 .dropdown-menu-toggle {
   @extend .dropdown-toggle;
+  justify-content: flex-start;
+  overflow: hidden;
   padding-right: 25px;
   position: relative;
-  width: 160px;
   text-overflow: ellipsis;
-  overflow: hidden;
+  width: 160px;
 
   .fa {
     position: absolute;
@@ -379,9 +380,10 @@
       > button,
       > .gl-button {
         display: flex;
+        justify-content: flex-start;
         margin: 0;
-        text-overflow: inherit;
         text-align: left;
+        text-overflow: inherit;
 
         &.btn .fa:not(:last-child) {
           margin-left: 5px;
